--- a/analyses/p_true_analyses/infer_p_true.Rmd
+++ b/analyses/p_true_analyses/infer_p_true.Rmd
@@ -41,7 +41,7 @@ add_png_to_facet <- function(ggplot_object, data, facet_var, x_loc,y_loc, width,
     panel_index <- ordered_panel_positions[i]
     facet_label <- facet_labels[i]
     if (!is.na(facet_label)) {
-      img <- readPNG(paste0("/Users/traceymills/Dropbox (MIT)/cocosci_projects/dots/spatiotemporal_comparitive/figs/func_ims/", facet_label, ".png"))
+      img <- readPNG(paste0("../figs/func_ims/", facet_label, ".png"))
       # Convert to raster and add it to the gtable
       g <- rasterGrob(img, interpolate = TRUE, width = unit(0.24, "npc"), height = unit(0.3, "npc"))
       g <- editGrob(g, vp = viewport(x = x_loc, y = y_loc, just = c("right", "top")))
@@ -223,7 +223,7 @@ get_subj_df <- function(participant_df, group, subj) {
   func_to_num_map <- setNames(as.numeric(factor(unique(df_subj$func.type))), unique(df_subj$func.type))
   subj_to_num_map <- setNames(as.numeric(factor(unique(df_subj$subject_id))), unique(df_subj$subject_id))
   var_maps <- list("func_type"=func_to_num_map, "subject_id"=subj_to_num_map)
-  fit <- readRDS(file = paste0("stan_fits/", group, "/", subj, ".rds"))
+  fit <- readRDS(file = paste0("stan_fits_lin/", group, "/", subj, ".rds"))
   posterior_samples_lst <- rstan::extract(fit)
   posterior_samples <- as.data.frame(posterior_samples_lst)
   posterior_samples$subj = subj
@@ -243,16 +243,17 @@ get_subj_df <- function(participant_df, group, subj) {
                       logprob_prev = LL_prev + log(p_prev),
                       logprob_rand = LL_rand + log(p_rand)) %>%
               rowwise() %>%
-              mutate(logprob_norm = logSumExp(c(logprob_true, logprob_lin, logprob_prev, logprob_rand))) %>%
+              mutate(#logprob_norm = logSumExp(c(logprob_true, logprob_prev, logprob_rand))) %>%
+                     logprob_norm = logSumExp(c(logprob_true, logprob_lin, logprob_prev, logprob_rand))) %>%
               ungroup() %>%
               mutate(logprob_true = logprob_true-logprob_norm,
                       logprob_lin = logprob_lin-logprob_norm,
                       logprob_prev = logprob_prev-logprob_norm,
                       logprob_rand = logprob_rand-logprob_norm) %>%
               mutate(prob_true = exp(logprob_true),
-                      prob_lin = exp(logprob_lin),
-                      prob_prev = exp(logprob_prev),
-                      prob_rand = exp(logprob_rand))
+                     prob_lin = exp(logprob_lin),
+                     prob_prev = exp(logprob_prev),
+                     prob_rand = exp(logprob_rand))
   
   return(df_subj)
 }
@@ -432,29 +433,204 @@ df_monkey <-  preprocess_df_monkey(read.csv("../data/participants/monkeys_all.cs
 
 # Run inference
 ```{r}
-#run_inference_group(df_kid_chs, "kids_chs")
-#generate_videos(df_monkey, "monkeys")
-```
+run_inference_group(df_kid_chs, "kids_chs")
+run_inference_group(df_monkey, "monkeys")
+run_inference_group(df_adult, "adults")
+#generate_videos(df_kid_chs, "kids_chs")
 
-
-```{r, echo=F}
 df_mean_kid_chs <- get_mean_df(df_kid_chs, "kids_chs")
-```
-```{r}
-df_mean_kid <- get_mean_df(df_kid, "kids")
 df_mean_adult <- get_mean_df(df_adult, "adults")
 df_mean_monkey <- get_mean_df(df_monkey, "monkeys")  %>% mutate(r_id = as.character(r_id))
+```
+
+```{r}
+df_mean_kid_chs_lin <- get_mean_df(df_kid_chs%>%filter(age==3), "kids_chs")
+write.csv(df_mean_kid_chs_lin, "mean_kid_chs_lin_3.csv")
+```
+
+```{r}
+write.csv(df_mean_kid_chs, "mean_kid_chs.csv")
+write.csv(df_mean_adult, "mean_adult.csv")
+write.csv(df_mean_monkey, "mean_monkey.csv")
+
+
+#df_mean_kid <- get_mean_df(df_kid, "kids")
+#df_mean_adult <- get_mean_df(df_adult, "adults")
+#df_mean_monkey <- get_mean_df(df_monkey, "monkeys")  %>% mutate(r_id = as.character(r_id))
 
 # df_mean_kid <- read.csv(df_mean_kid, "kid.csv")
-# df_mean_adult <- read.csv(df_mean_adult, "adult.csv")
-# df_mean_monkey <- read.csv(df_mean_monkey, "monkey.csv") %>% mutate(r_id = as.character(r_id))
+#df_mean_adult <- read.csv("adult.csv") %>% mutate(guess_num=tpt-2)
+#df_mean_monkey <- read.csv("monkey.csv") %>% mutate(r_id = as.character(r_id)) %>% mutate(guess_num=tpt-2)
 
 ```
+
+
+# P lin monkeys vs 3 yo
+```{r}
+df_mean_monkey_lin <- read.csv("mean_monkey_lin.csv") %>% mutate(r_id = as.character(r_id))
+df_mean_kid_chs_lin <- read.csv("mean_kid_chs_lin_3.csv")
+demo <- read.csv("../../human_experiments/dots_app_kids/data/demographics.csv") %>% mutate(subject_id = child__hashed_id)
+ages <- demo %>% mutate(exact_age = as.numeric(difftime(consent__time, child__birthday, units = "days")) / 365.25) %>% select(c(subject_id, exact_age)) %>% mutate(subj=subject_id) %>% 
+  mutate(age = ifelse(exact_age<4, 3,
+                            ifelse(exact_age<5, 4,
+                                   ifelse(exact_age<6, 5,
+                                          ifelse(exact_age<7, 6,
+                                                 ifelse(exact_age<8, 7,
+                                                        NA))))))
+
+df_mean_kid_chs_lin <- df_mean_kid_chs_lin %>% mutate(subj=r_id) %>% mutate(group="kids") %>%
+                  filter(func.type %in% unique(df_mean_monkey_lin$func.type)) %>%
+                  merge(ages, by="subj")
+
+
+df_all <- bind_rows(df_mean_kid_chs_lin, df_mean_monkey_lin)
+
+df_all <- df_all %>% mutate(agent = ifelse(group=="monkeys", subj, group)) %>% mutate(guess_num=tpt-2)
+```
+
+```{r}
+df_all$agent <- factor(df_all$agent, 
+                       levels = c("kids", "BP22", "BP24"),
+                       labels = c("Children", "Monkey 1", "Monkey 2"))
+df_all <- df_all %>%
+          group_by(func.type, agent) %>%
+          mutate(mean_p_lin_kid = ifelse(agent == "Children", mean(prob_lin, na.rm = TRUE), NA)) %>%
+          group_by(func.type) %>%
+          mutate(mean_p_lin_kid = mean(mean_p_lin_kid, na.rm = TRUE)) %>%
+          arrange(mean_p_lin_kid) %>%
+          ungroup()
+
+df_all$func.type =  factor(df_all$func.type, levels=unique(df_all$func.type[order(1-df_all$mean_p_lin_kid)]))
+df_all$func.type <- fct_reorder(df_all$func.type, df_all$mean_p_lin_kid, .desc=T)
+```
+
+```{r}
+# p_lin
+# summarize data
+summary_stats <- df_all %>%
+  group_by(agent, age, func.type, guess_num) %>%
+    summarize(
+    mean_p_lin_kid = mean(mean_p_lin_kid),
+    prob_lin = mean(prob_lin),
+  ) %>%
+  ungroup() %>%
+  group_by(agent, age, func.type) %>%
+  summarize(
+    median = median(prob_lin),
+    mean_p_lin_kid = mean(mean_p_lin_kid),
+    lower_q = quantile(prob_lin, 0.25),
+    upper_q = quantile(prob_lin, 0.75),
+    mean_p_lin = mean(prob_lin),
+    sd_p_lin = sd(prob_lin),
+    se_p_lin = sd(prob_lin)/ sqrt(length(prob_lin))) %>%
+  mutate(char_age=ifelse(agent=="Children", paste0("(",as.character(age),")"), ""))
+  #mutate(agent = ifelse(agent=="BP22", "Monkey 1", agent),
+  #       agent = ifelse(agent=="BP24", "Monkey 2", agent))
+
+summary_stats$func.type <- fct_reorder(summary_stats$func.type, summary_stats$mean_p_lin_kid, .desc=T)
+                      
+
+p <- ggplot(data=summary_stats) +
+  geom_point(aes(color=paste0(agent, char_age), fill=paste0(agent, char_age), x = func.type, y = mean_p_lin), size=2,  position = position_dodge(width = .7), shape=8, stroke=1) +
+  geom_errorbar(aes(x=func.type, ymin = mean_p_lin-sd_p_lin, ymax = mean_p_lin+sd_p_lin, color=paste0(agent, char_age)), width = 0.2, position = position_dodge(width = .7), alpha=0.3) +
+  #scale_color_manual(values = c("#329828",  "orchid", "dodgerblue", "blue")) +
+  scale_y_continuous(breaks = seq(0,1,by=0.5)) +
+  coord_cartesian(clip = 'off') +
+  paper_theme + theme(legend.title=element_blank(), legend.position="top", plot.margin = unit(c(0, 0, 15, 0), "mm"), axis.text.x = element_blank(), strip.background=element_rect(fill="white", color="white")) +
+  labs(x="", y="P(linear)")
+
+fname <- "../../figs/p_true/p_lin.png"
+add_png_to_plot(p, plot_df, -0.13,440,100, fname)
+print(knitr::include_graphics(fname))
+```
+
+
+```{r}
+df_mean_kid_chs <- read.csv("mean_kid_chs.csv") #%>% filter(exact_age)
+
+```
+
+# P true by func.type, tpt
+```{r, cache=T}
+demo <- read.csv("../../human_experiments/dots_app_kids/data/demographics.csv") %>% mutate(subject_id = child__hashed_id)
+ages <- demo %>% mutate(exact_age = as.numeric(difftime(consent__time, child__birthday, units = "days")) / 365.25) %>% select(c(subject_id, exact_age)) %>% mutate(subj=subject_id) %>% 
+  mutate(age = ifelse(exact_age<4, 3,
+                            ifelse(exact_age<5, 4,
+                                   ifelse(exact_age<6, 5,
+                                          ifelse(exact_age<7, 6,
+                                                 ifelse(exact_age<8, 7,
+                                                        NA))))))
+
+df_mean_kid_chs <- df_mean_kid_chs %>% mutate(subj=r_id) %>% mutate(group="kids") %>%
+                  filter(func.type %in% unique(df_mean_adult$func.type)) %>%
+                  merge(ages, by="subj")
+
+df_all <- df_mean_kid_chs %>% filter(!(func.type %in% c('radial_increasing'))) %>% filter(exact_age<8)
+
+
+#df_all <- bind_rows(df_mean_kid_chs)#df_mean_kid, df_mean_monkey, df_mean_adult)
+df_all <- df_all %>% mutate(guess_num=tpt-2)
+df_all$age <- factor(df_all$age)
+df_all <- df_all %>%
+          group_by(func.type, age) %>%
+          mutate(mean_p_true_7 = ifelse(age == 7, mean(prob_true, na.rm = TRUE), NA)) %>%
+          group_by(func.type) %>%
+          mutate(mean_p_true_7 = mean(mean_p_true_7, na.rm = TRUE)) %>%
+          arrange(mean_p_true_7) %>%
+          ungroup()
+
+df_all$func.type =  factor(df_all$func.type, levels=unique(df_all$func.type[order(1-df_all$mean_p_true_7)]))
+df_all$func.type <- fct_reorder(df_all$func.type, df_all$mean_p_true_7, .desc=T)
+
+# Plot p(learned) over time
+fname <-  '../../figs/p_true/p_true_curves.png'
+
+p.1 <- ggplot(data = df_all, aes(x = guess_num, y = prob_true, color = age)) +
+  stat_summary(fun = "mean", na.rm = TRUE, geom = "point", size = 1) +
+  stat_summary(fun = "mean", na.rm = TRUE, geom = "line", alpha = 0.5) +
+  stat_summary(
+    fun.data = "mean_sdl",
+    fun.args = list(mult = 1),
+    na.rm = TRUE,
+    geom = "ribbon",
+    aes(ymin = ..ymin.., ymax = ..ymax.., fill = age), 
+    color = NA, # No border
+    alpha = 0.0 # Transparency
+  ) +
+  coord_cartesian(xlim = c(1, 13), ylim = c(-0.4, 1.3)) +
+  #scale_color_manual(values = c("#329828",  "orchid", "dodgerblue", "blue")) +
+  #scale_fill_manual(values = c("#329828",  "orchid", "dodgerblue", "blue")) +
+  facet_wrap(~func.type, ncol = 7) +
+  scale_y_continuous(breaks = c(0, 0.5, 1)) +
+  scale_x_continuous(breaks = c(1, 6, 12)) +
+  geom_hline(yintercept=0, linetype="dashed", color="lightgray") +
+  geom_hline(yintercept=1, linetype="dashed", color="lightgray") +
+  paper_theme +
+  theme(
+    legend.title = element_blank(),
+    legend.position = "top",
+    strip.background = element_blank(),
+    strip.text = element_blank()
+  ) +
+  labs(x = "Guess number", y = "P(correct)")
+
+
+add_png_to_facet(p.1, df_all, "func.type",1.35,.67,700/2,230/2, fname)
+print(knitr::include_graphics(fname))
+
+```
+
 
 
 # P true by func.type, tpt
 ```{r, cache=T}
-df_all <- bind_rows(df_mean_kid, df_mean_monkey, df_mean_adult)
+df_mean_kid_chs <- df_mean_kid_chs %>% mutate(subj=r_id) %>% mutate(group="kids") %>%
+                  filter(func.type %in% unique(df_mean_adult$func.type)) %>%
+                  merge(ages, by="subj")
+```
+
+```{r}
+df_all <- bind_rows(df_mean_kid_chs, df_mean_monkey%>% mutate(subj=r_id), df_mean_adult%>% mutate(subj=r_id))
 df_all <- df_all %>% mutate(agent = ifelse(group=="monkeys", subj, group)) %>% mutate(guess_num=tpt-2)
 df_all$agent <- factor(df_all$agent, 
                        levels = c("adults", "kids", "BP22", "BP24"),
@@ -466,32 +642,36 @@ df_all <- df_all %>%
           mutate(mean_p_true_kid = mean(mean_p_true_kid, na.rm = TRUE)) %>%
           arrange(mean_p_true_kid) %>%
           ungroup()
+```
 
+```{r}
 df_all$func.type =  factor(df_all$func.type, levels=unique(df_all$func.type[order(1-df_all$mean_p_true_kid)]))
 df_all$func.type <- fct_reorder(df_all$func.type, df_all$mean_p_true_kid, .desc=T)
 
 # Plot p(learned) over time
-fname <-  '../figs/p_true_curves_no_error.png'
+fname <-  '../../figs/p_true/p_true_curves_no_error.png'
 
 p.1 <- ggplot(data = df_all, aes(x = guess_num, y = prob_true, color = agent)) +
   stat_summary(fun = "mean", na.rm = TRUE, geom = "point", size = 1) +
   stat_summary(fun = "mean", na.rm = TRUE, geom = "line", alpha = 0.5) +
-  stat_summary(
-    fun.data = "mean_sdl",
-    fun.args = list(mult = 1),
-    na.rm = TRUE,
-    geom = "ribbon",
-    aes(ymin = ..ymin.., ymax = ..ymax.., fill = agent), 
-    color = NA, # No border
-    alpha = 0.0 # Transparency
-  ) +
+  # stat_summary(
+  #   fun.data = "mean_sdl",
+  #   fun.args = list(mult = 1),
+  #   na.rm = TRUE,
+  #   geom = "ribbon",
+  #   aes(ymin = ..ymin.., ymax = ..ymax.., fill = agent), 
+  #   color = NA, # No border
+  #   alpha = 0.0 # Transparency
+  # ) +
   coord_cartesian(xlim = c(1, 13), ylim = c(-0.4, 1.3)) +
   scale_color_manual(values = c("#329828",  "orchid", "dodgerblue", "blue")) +
-  scale_fill_manual(values = c("#329828",  "orchid", "dodgerblue", "blue")) +
+  #scale_fill_manual(values = c("#329828",  "orchid", "dodgerblue", "blue")) +
   facet_wrap(~func.type, ncol = 7) +
   scale_y_continuous(breaks = c(0, 0.5, 1)) +
   scale_x_continuous(breaks = c(1, 6, 12)) +
   paper_theme +
+  geom_hline(yintercept=0, linetype="dashed", color="lightgray") +
+  geom_hline(yintercept=1, linetype="dashed", color="lightgray") +
   theme(
     legend.title = element_blank(),
     legend.position = "top",
@@ -500,8 +680,8 @@ p.1 <- ggplot(data = df_all, aes(x = guess_num, y = prob_true, color = agent)) +
   ) +
   labs(x = "Guess number", y = "P(correct)")
 
-
-add_png_to_facet(p.1, df_all, "func.type",  1.35,.67,700/2,230/2, fname)
+#p.1
+add_png_to_facet(p.1, df_all, "func.type", levels, 1.35,.67,700/2,230/2, fname)
 print(knitr::include_graphics(fname))
 
 ```
@@ -511,13 +691,13 @@ print(knitr::include_graphics(fname))
 ```{r, cache=T}
 # summarize data
 summary_stats <- df_all %>%
-  group_by(agent, func.type, guess_num) %>%
+  group_by(agent, age, func.type, guess_num) %>%
     summarize(
     mean_p_true_kid = mean(mean_p_true_kid),
     prob_true = mean(prob_true),
   ) %>%
   ungroup() %>%
-  group_by(agent, func.type) %>%
+  group_by(agent, age, func.type) %>%
   summarize(
     median = median(prob_true),
     mean_p_true_kid = mean(mean_p_true_kid),
@@ -525,26 +705,30 @@ summary_stats <- df_all %>%
     upper_q = quantile(prob_true, 0.75),
     mean_p_true = mean(prob_true),
     sd_p_true = sd(prob_true),
-    se_p_true = sd(prob_true)/ sqrt(length(prob_true))) #%>%
+    se_p_true = sd(prob_true)/ sqrt(length(prob_true))) %>%
+  mutate(char_age=ifelse(agent=="Children", as.character(age), ""))
   #mutate(agent = ifelse(agent=="BP22", "Monkey 1", agent),
   #       agent = ifelse(agent=="BP24", "Monkey 2", agent))
 
 summary_stats$func.type <- fct_reorder(summary_stats$func.type, summary_stats$mean_p_true_kid, .desc=T)
+                      
 
 p <- ggplot(data=summary_stats) +
-  geom_point(aes(color=agent, fill=agent, x = func.type, y = mean_p_true), size=2,  position = position_dodge(width = .7), shape=8, stroke=1) +
-  geom_errorbar(aes(x=func.type, ymin = mean_p_true-sd_p_true, ymax = mean_p_true+sd_p_true, color=agent), width = 0.2, position = position_dodge(width = .7), alpha=0.3) +
-  scale_color_manual(values = c("#329828",  "orchid", "dodgerblue", "blue")) +
+  geom_point(aes(color=paste0(agent, char_age), fill=paste0(agent, char_age), x = func.type, y = mean_p_true), size=2,  position = position_dodge(width = .7), shape=8, stroke=1) +
+  geom_errorbar(aes(x=func.type, ymin = mean_p_true-sd_p_true, ymax = mean_p_true+sd_p_true, color=paste0(agent, char_age)), width = 0.2, position = position_dodge(width = .7), alpha=0.3) +
+  #scale_color_manual(values = c("#329828",  "orchid", "dodgerblue", "blue")) +
   scale_y_continuous(breaks = seq(0,1,by=0.5)) +
   coord_cartesian(clip = 'off') +
   paper_theme + theme(legend.title=element_blank(), legend.position="top", plot.margin = unit(c(0, 0, 15, 0), "mm"), axis.text.x = element_blank(), strip.background=element_rect(fill="white", color="white")) +
   labs(x="", y="P(true)")
 
 #p
-fname <- "../figs/p_true.png"
+fname <- "../../figs/p_true/p_true.png"
 add_png_to_plot(p, plot_df, -0.13,440,100, fname)
 print(knitr::include_graphics(fname))
 ```
+
+
 # Scatter plots
 ```{r}
 plot_scatter <- function(dfx, dfy, name_x, name_y) {
@@ -552,7 +736,7 @@ plot_scatter <- function(dfx, dfy, name_x, name_y) {
   plot_df2 <- dfx %>% select(prob_true, guess_num, func.type) %>% group_by(func.type) %>% summarize(mean_p_true_dfx = mean(prob_true, rm.na=T))
   plot_df <- merge(plot_df1, plot_df2, by="func.type")
   plot_df <- plot_df %>%
-              mutate(image_path = sprintf("/Users/traceymills/Dropbox (MIT)/cocosci_projects/dots/spatiotemporal_comparitive/figs/func_ims/%s.png", func.type))
+              mutate(image_path = sprintf("/Users/traceymills/Dropbox (MIT)/cocosci_projects/dots/spatiotemporal_comparitive/analyses/figs/func_ims/%s.png", func.type))
   ggplot(data=plot_df%>%arrange(mean_p_true_dfx), aes(x=mean_p_true_dfx, y=mean_p_true_dfy)) +
     geom_abline(slope = 1, intercept = 0, color = "gray", linetype = "dashed") +
     #stat_smooth(color="orange", method="lm",se=TRUE, linewidth=0.8, alpha=0.2) +
@@ -566,11 +750,13 @@ plot_scatter <- function(dfx, dfy, name_x, name_y) {
              hjust = 1, vjust = 0) +
     paper_theme +
     labs(x=paste0("P(correct)  (", name_x, ")"), y=paste0("P(correct)  (",name_y,")"))
-  ggsave(paste0("../figs/scatters/",name_x,"_vs_",name_y,".png"), plot = last_plot(), width = 5, height = 4.8, units = "in", bg="white")
+  ggsave(paste0("../../figs/p_true/",name_x,"_vs_",name_y,".png"), plot = last_plot(), width = 5, height = 4.8, units = "in", bg="white")
   beta(lm(data=plot_df, mean_p_true_dfx~ mean_p_true_dfy))
 }
+```
 
-plot_scatter(df_mean_monkey %>% filter(subj=="BP22"), df_mean_monkey %>% filter(subj=="BP24"), "Monkey1", "Monkey2")
+```{r}
+# plot_scatter(df_mean_monkey %>% filter(subj=="BP22"), df_mean_monkey %>% filter(subj=="BP24"), "Monkey1", "Monkey2")
 # plot_scatter(df_mean_monkey %>% filter(subj=="BP22"), df_mean_adult, "Monkey1", "Adults")
 # plot_scatter(df_mean_monkey %>% filter(subj=="BP24"), df_mean_adult, "Monkey2", "Adults")
 # plot_scatter(df_mean_monkey %>% filter(subj=="BP22"), df_mean_kid, "Monkey1", "Children")
@@ -578,5 +764,14 @@ plot_scatter(df_mean_monkey %>% filter(subj=="BP22"), df_mean_monkey %>% filter(
 # plot_scatter(df_mean_monkey, df_mean_adult, "Monkeys", "Adults")
 # plot_scatter(df_mean_monkey, df_mean_kid, "Monkeys", "Children")
 # plot_scatter(df_mean_kid, df_mean_adult, "Children", "Adults")
-
+plot_scatter(df_mean_kid_chs%>%filter(age==3), df_mean_monkey, "3yo",  "Monkeys")
+plot_scatter(df_mean_kid_chs%>%filter(age==4), df_mean_monkey, "4yo",  "Monkeys")
+plot_scatter(df_mean_kid_chs%>%filter(age==5), df_mean_monkey, "5yo",  "Monkeys")
+plot_scatter(df_mean_kid_chs%>%filter(age==6), df_mean_monkey, "6yo",  "Monkeys")
+plot_scatter(df_mean_kid_chs%>%filter(age==7), df_mean_monkey, "7yo",  "Monkeys")
+plot_scatter(df_mean_kid_chs%>%filter(age==3), df_mean_adult, "3yo",  "Adults")
+plot_scatter(df_mean_kid_chs%>%filter(age==4), df_mean_adult, "4yo",  "Adults")
+plot_scatter(df_mean_kid_chs%>%filter(age==5), df_mean_adult, "5yo",  "Adults")
+plot_scatter(df_mean_kid_chs%>%filter(age==6), df_mean_adult, "6yo",  "Adults")
+plot_scatter(df_mean_kid_chs%>%filter(age==7), df_mean_adult, "7yo",  "Adults")
 ```
