--- a/analyses/accuracy.Rmd
+++ b/analyses/accuracy.Rmd
@@ -158,7 +158,7 @@ add_new_columns_grouped <- function(df, df_model, func, group_cols, model_type, 
 ```
 
 
-###Load participant data
+# Load participant data
 ```{r}
 df_adult <- preprocess_df_human(read.csv("data/participants/adults.csv"))
 df_kid <- preprocess_df_human(read.csv("data/participants/kids.csv"))
@@ -216,7 +216,7 @@ add_png_to_facet <- function(ggplot_object, data, facet_var, x_loc,y_loc, width,
     panel_index <- ordered_panel_positions[i]
     facet_label <- facet_labels[i]
     if (!is.na(facet_label)) {
-      img <- readPNG(paste0("figs/func_ims/", facet_label, ".png"))
+      img <- readPNG(paste0("../../figs/func_ims/", facet_label, ".png"))
       # Convert to raster and add it to the gtable
       g <- rasterGrob(img, interpolate = TRUE, width = unit(0.28, "npc"), height = unit(0.3, "npc"))
       g <- editGrob(g, vp = viewport(x = x_loc, y = y_loc, just = c("right", "top")))
@@ -323,7 +323,7 @@ p <- ggplot() +
   paper_theme + theme(legend.title=element_blank(), legend.position="top", plot.margin = unit(c(0, 0, 0, 0), "mm"), strip.background=element_rect(fill="white", color="white")) +
   facet_wrap(~func.name, ncol=7) + labs(y="Accuracy", x="Timepoint") + scale_x_continuous(breaks = c(4, 8, 12)) + scale_y_continuous(breaks = c(0, 0.5, 1))
 
-fname <- "figs/accuracy/learning_curves/adult_kid_ind.png"
+fname <- "../../figs/accuracy/learning_curves/adult_kid_ind.png"
 p
 #add_png_to_facet(p, summary_adult, "func.name",  1.33,.67,700/2,300/2, fname)
 #print(knitr::include_graphics(fname))
@@ -335,13 +335,12 @@ p
 # correct by func
 # Mean and SD CI by func
 ```{r, cache=T}
-library(forcats)
 
 add_png_to_plot <- function(ggplot_object, data, y_loc, width, height, out_file) {
   labels = ggplot_build(ggplot_object)$layout$panel_params[[1]]$x$get_labels()
   for (i in seq_along(labels)) {
     facet_label <- labels[i]
-    img <- readPNG(paste0("figs/func_ims/", facet_label, ".png"))
+    img <- readPNG(paste0("../../figs/func_ims/", facet_label, ".png"))
     g <- rasterGrob(img, interpolate = TRUE, width = unit(0.5, "npc"), height = unit(0.8, "npc"))
     ggplot_object <- ggplot_object + annotation_custom(g, xmin = i-.85, xmax = i+.85, ymin = y_loc-0.28, ymax = y_loc)
   }
@@ -351,7 +350,7 @@ add_png_to_plot <- function(ggplot_object, data, y_loc, width, height, out_file)
 }
 
 
-plot_df <- bind_rows(plot_df_adult, plot_df_kid, plot_df_monkey) %>% mutate(image_path = sprintf("figs/func_ims/%s.png", func.name))
+plot_df <- bind_rows(plot_df_adult, plot_df_kid, plot_df_monkey) %>% mutate(image_path = sprintf("../../figs/func_ims/%s.png", func.name))
 
 summary1 <- plot_df %>%
   group_by(func.name, subj_id, agent) %>%
@@ -387,21 +386,21 @@ p <- ggplot() +
   labs(x="", y="Accuracy")
 
 #p
-fname <- "figs/accuracy/all_funcs.png"
+fname <- "../../figs/accuracy/all_funcs.png"
 add_png_to_plot(p, plot_df, -0.13,410,100, fname)
 print(knitr::include_graphics(fname))
 ```
 
 
-# Lets make scatters for accuracy
+# Scatter plots of accuracy between groups
 ```{r}
 plot_df_adult <- df_adult %>% mutate(agent="Adults") %>% select(correct, tpt, subj_id, func.name, agent) %>% mutate(adult_correct = correct) %>% group_by(func.name) %>% summarize(mean_p_true_adult = mean(correct, na.rm=T))
 plot_df_monkey <- df_monkey_all %>% mutate(agent="Monkeys") %>% select(correct, tpt, subj_id, func.name, agent) %>% group_by(func.name) %>% summarize(mean_p_true_monkey = mean(correct, na.rm=T))
 plot_df_kid <- df_kid %>% mutate(agent="Children") %>% select(correct, tpt, subj_id, func.name, agent) %>% mutate(kid_correct = correct) %>% group_by(func.name) %>% summarize(mean_p_true_kid = mean(correct, na.rm=T))
 ```
-#monkeys vs adults
+# Monkeys vs adults
 ```{r}
-plot_df <- merge(plot_df_adult, plot_df_monkey, by="func.name") %>% mutate(image_path = sprintf("figs/func_ims/%s.png", func.name))
+plot_df <- merge(plot_df_adult, plot_df_monkey, by="func.name") %>% mutate(image_path = sprintf("../../figs/func_ims/%s.png", func.name))
 ggplot(data=plot_df%>%arrange(mean_p_true_monkey), aes(x=mean_p_true_monkey, y=mean_p_true_adult)) +
   geom_abline(slope = 1, intercept = 0, color = "gray", linetype = "dashed") +
   #stat_smooth(data=plot_df, aes(x=mean_p_true_monkey, y=mean_p_true_adult),color="orange", method="lm",se=TRUE, linewidth=0.8, alpha=0.2) +
@@ -414,12 +413,12 @@ ggplot(data=plot_df%>%arrange(mean_p_true_monkey), aes(x=mean_p_true_monkey, y=m
            label = paste("R² =", round(summary(lm(mean_p_true_adult ~ mean_p_true_monkey, data = plot_df))$r.squared, 3)), hjust = 1, vjust = 0) +
   paper_theme +
   labs(x="Accuracy (Monkeys)", y="Accuracy (Adults)")
-ggsave("figs/scatters/monkeys_vs_adults.png", plot = last_plot(), width = 5, height = 4.4, units = "in", bg="white")
+ggsave("../../figs/scatters/monkeys_vs_adults.png", plot = last_plot(), width = 5, height = 4.4, units = "in", bg="white")
 
 ```
-#kids vs adults
+# Kids vs adults
 ```{r}
-plot_df <- merge(plot_df_adult, plot_df_kid, by="func.name") %>% mutate(image_path = sprintf("figs/func_ims/%s.png", func.name))
+plot_df <- merge(plot_df_adult, plot_df_kid, by="func.name") %>% mutate(image_path = sprintf("../../figs/func_ims/%s.png", func.name))
 ggplot(data=plot_df%>%arrange(mean_p_true_kid), aes(x=mean_p_true_kid, y=mean_p_true_adult)) +
   geom_abline(slope = 1, intercept = 0, color = "gray", linetype = "dashed") +
   geom_image(aes(x=mean_p_true_kid+.05, y=mean_p_true_adult+.05, image = image_path), size=0.09) +
@@ -431,12 +430,12 @@ ggplot(data=plot_df%>%arrange(mean_p_true_kid), aes(x=mean_p_true_kid, y=mean_p_
            label = paste("R² =", round(summary(lm(mean_p_true_adult ~ mean_p_true_kid, data = plot_df))$r.squared, 3)), hjust = 1, vjust = 0) +
   paper_theme +
   labs(x="Accuracy (Children)", y="Accuracy (Adults)")
-ggsave("figs/scatters/kids_vs_adults.png", plot = last_plot(), width = 5, height = 4.4, units = "in", bg="white")
+ggsave("../../figs/scatters/kids_vs_adults.png", plot = last_plot(), width = 5, height = 4.4, units = "in", bg="white")
 ```
 
 #kids vs monkeys
 ```{r}
-plot_df <- merge(plot_df_monkey, plot_df_kid, by="func.name") %>% mutate(image_path = sprintf("figs/func_ims/%s.png", func.name))
+plot_df <- merge(plot_df_monkey, plot_df_kid, by="func.name") %>% mutate(image_path = sprintf("../../figs/func_ims/%s.png", func.name))
 ggplot(data=plot_df%>%arrange(mean_p_true_kid), aes(x=mean_p_true_kid, y=mean_p_true_monkey)) +
   geom_abline(slope = 1, intercept = 0, color = "gray", linetype = "dashed") +
   geom_image(aes(x=mean_p_true_kid+.05, y=mean_p_true_monkey+.05, image = image_path), size=0.09) +
@@ -448,7 +447,7 @@ ggplot(data=plot_df%>%arrange(mean_p_true_kid), aes(x=mean_p_true_kid, y=mean_p_
            label = paste("R² =", round(summary(lm(mean_p_true_monkey ~ mean_p_true_kid, data = plot_df))$r.squared, 3)), hjust = 1, vjust = 0) +
   paper_theme +
   labs(x="Accuracy (Children)", y="Accuracy (Monkeys)")
-ggsave("figs/scatters/kids_vs_monkeys_2.png", plot = last_plot(), width = 5, height = 4.4, units = "in", bg="white")
+ggsave("../../figs/scatters/kids_vs_monkeys_2.png", plot = last_plot(), width = 5, height = 4.4, units = "in", bg="white")
 ```
 
 
@@ -512,7 +511,7 @@ cor_monkeys <- df_monkey %>% group_by(func.name, subj_id) %>% summarize(correct=
 beta(lm(data=cor_monkeys, BP22~BP24))
 ```
 
-#stimuli
+# plot all stimuli
 ```{r}
 #summary_adult$func.name <- factor(summary_adult$func.name,levels=unique(summary_adult$func.name))
 # Create the plot with a ribbon and a line
@@ -529,7 +528,7 @@ p <- ggplot() +
           axis.text.x = element_text(), axis.text.y = element_blank(), strip.background=element_rect(fill="white", color="white"), scale_x_continuous(breaks = c(3, 9, 12))) +
   guides(alpha="none") +
   facet_wrap(~func.name, ncol=7, scales="free") + labs(y="", x="")
-fname <- "figs/stimuli.png"
+fname <- "../../figs/stimuli.png"
 
 #add_png_to_facet(p, summary_adult, "func.name",  1.35,.67,700/2,290/2, fname)
 ggsave(p, filename = fname, width=680/2, height=300/2, units = 'mm')
